<resources>
    <string name="app_name">SIGAA:Notas</string>
    <string name="title_activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">CPF</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="loading">O SIGAA é lento, tenha calma.\nCaso ao carregar não apareçam notas, certifique-se de que:\n1) você está matriculado em disciplinas neste semestre,\n2) Não há notificaçõe no site do SIGAA.</string>
    <string name="loadingFrequency">O SIGAA é lento, tenha calma.\nCaso ao carregar não apareçam frequências, certifique-se de que:\n1) você está matriculado em disciplinas neste semestre,\n2) Não há notificaçõe no site do SIGAA,\n3) O professor lança frequências</string>
    <string name="test">Avaliação</string>
    <string name="maxScore">Nota Máxima</string>
    <string name="score">Nota</string>
    <string name="total">Total: </string>
    <string name="reload">Recarregar</string>
    <string name="logout">Sair</string>
    <string name="title_activity_about">Sobre</string>
    <string name="about_message">WebScrapper que baixa notas do SIGAA das matérias do semestre atual.\nNão é desenvolvido nem endossado pelo CEFET.\nNão faz upload de sua senha.\n<b>Não funciona se houver mensagem na página inicial.</b>\n\nCódigo fonte disponível em: https://github.com/acristoffers/SIGAAGrades</string>
    <string name="about">Sobre</string>
    <string name="notas">Notas</string>
    <string name="horarios">Horários</string>
    <string name="hoje">Hoje</string>
    <string name="todos">Todos</string>
    <string name="placeholder">placeholder</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="adicionar_ao_calendario">Adicionar ao calendário</string>
    <string name="settings">Configurações</string>
    <string name="sincronizacao">Sincronização</string>
    <string name="sync_grades_summary">Sincroniza apenas as notas</string>
    <string name="sync_grades_title">Sincronizar notas</string>
    <string name="sync_schedules_title">Sincronizar horários</string>
    <string name="sync_schedules_summary">Sincroniza apenas os horários</string>
    <string name="sync_notify_title">Exibir notificações</string>
    <string name="sync_notify_summary">Exibe notificações quando há novos items</string>
    <string name="sync_interval_summary">Intervalo em minutos entre verificações</string>
    <string name="sync_interval_title">Intervalo de verificação</string>
    <string name="notification_schedules_title">Horários modificados!</string>
    <string name="notification_schedules_text">Ocorreu modificação nos horários!</string>
    <string name="notification_grades_title">Notas modificadas!</string>
    <string name="notification_grades_text">Notas foram lançadas ou modificadas!</string>
    <string name="channel_name">SIGAA</string>
    <string name="channel_description">Notificações de novas notas e horários</string>
    <string name="theme">Tema</string>
    <string name="theme_summary">Usar versão escura do tema</string>
    <string name="theme_title">Tema escuro</string>
    <string name="day_schedule_date_local">De %s até %s. Local: %s</string>
    <string name="seg">SEG</string>
    <string name="ter">TER</string>
    <string name="qua">QUA</string>
    <string name="qui">QUI</string>
    <string name="sex">SEX</string>
    <string name="h">H</string>
    <string name="frequencia">Frequência</string>
    <string name="curso">Curso</string>
    <string name="presencas">Presenças</string>
    <string name="aulas_ministradas">Aulas Ministradas</string>
    <string name="total_aulas">Total de Aulas</string>
    <string name="porcentagem_faltas">Porcentagem de faltas</string>
    <string-array name="sync_minutes">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
