<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Álan Crístoffer
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/theme">
        <SwitchPreference
            android:defaultValue="false"
            android:key="darkTheme"
            android:summary="@string/theme_summary"
            android:title="@string/theme_title"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sincronizacao">
        <SwitchPreference
            android:defaultValue="true"
            android:key="grades"
            android:summary="@string/sync_grades_summary"
            android:title="@string/sync_grades_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="schedules"
            android:summary="@string/sync_schedules_summary"
            android:title="@string/sync_schedules_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="notify"
            android:summary="@string/sync_notify_summary"
            android:title="@string/sync_notify_title"/>

        <ListPreference
            android:defaultValue="30"
            android:dialogTitle="@string/sync_interval_title"
            android:entries="@array/sync_minutes"
            android:entryValues="@array/sync_minutes"
            android:key="interval"
            android:summary="@string/sync_interval_summary"
            android:title="@string/sync_interval_title"/>
    </PreferenceCategory>
</PreferenceScreen>
