<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Álan Crístoffer
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/timeline"
        android:shortcutDisabledMessage="@string/frequencia"
        android:shortcutId="view_frequency"
        android:shortcutLongLabel="@string/frequencia"
        android:shortcutShortLabel="@string/frequencia">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="sigaa.acristoffers.me.sigaagrades.MainActivity"
            android:targetPackage="sigaa.acristoffers.me.sigaagrades">
            <extra
                android:name="fragment"
                android:value="frequency"/>
        </intent>
        <categories android:name="android.shortcut.frequency"/>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/calendar_today"
        android:shortcutDisabledMessage="@string/horarios"
        android:shortcutId="view_schedules"
        android:shortcutLongLabel="@string/horarios"
        android:shortcutShortLabel="@string/horarios">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="sigaa.acristoffers.me.sigaagrades.MainActivity"
            android:targetPackage="sigaa.acristoffers.me.sigaagrades">
            <extra
                android:name="fragment"
                android:value="schedules"/>
        </intent>
        <categories android:name="android.shortcut.schedules"/>
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/assignment"
        android:shortcutDisabledMessage="@string/notas"
        android:shortcutId="view_grades"
        android:shortcutLongLabel="@string/notas"
        android:shortcutShortLabel="@string/notas">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="sigaa.acristoffers.me.sigaagrades.MainActivity"
            android:targetPackage="sigaa.acristoffers.me.sigaagrades">
            <extra
                android:name="fragment"
                android:value="grades"/>
        </intent>
        <categories android:name="android.shortcut.grades"/>
    </shortcut>
</shortcuts>
